@@ -1,3 +1,7 @@
+2006-11-13  Sven Neumann  <sven@gimp.org>
+
+	* removed obsolete update.sh script.
+
 2006-11-13  Jakub Friedl <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation
