@@ -1,10 +1,14 @@
+2006-11-13  Sven Neumann  <sven@gimp.org>
+
+	* removed obsolete update.sh script.
+
 2006-11-06  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
 
 2006-11-06  Priit Laes  <plaes@cvs.gnome.org>
 
-	* et.po: Translation updated by "Last-Translator: Olle Niit olle@paalalinn.com\n".
+	* et.po: Translation updated by Olle Niitolle.
 
 2006-11-03  Jakub Friedl  <jfriedl@suse.cz>
 
